--- a/public/style/ctool/base.css
+++ b/public/style/ctool/base.css
@@ -29,7 +29,7 @@
 }
 .right-wrapper .list .side-title {
   font-size: 0.28rem;
-  color: #333333;
+  color: #5c5a5a;
   margin: 0.2rem 0;
 }
 .right-wrapper .list .menu {
@@ -43,7 +43,7 @@
   min-height: 0.5rem;
 }
 .right-wrapper .list .menu > li > a {
-  color: #333333;
+  color: #5c5a5a;
   font-size: 0.24rem;
   position: relative;
 }
@@ -67,7 +67,7 @@
 }
 .right-wrapper .list .menu > li .secondary li a {
   font-size: 0.2rem;
-  color: #333333;
+  color: #5c5a5a;
 }
 .right-wrapper .list.loginout a {
   display: block;
@@ -77,7 +77,7 @@
   margin: 0 auto;
   line-height: 0.5rem;
   background-color: #666666;
-  color: #333333;
+  color: #5c5a5a;
   font-size: 0.24rem;
   text-align: center;
 }
@@ -88,10 +88,11 @@
 }
 .wrapper .left-wrapper {
   width: 100%;
-  height: 100%;
+  min-height: 100%;
   flex: 1;
   background-color: #ffffff;
   border-right: 1px solid #dddddd;
+  position: relative;
 }
 .wrapper .left-wrapper .desc-menu {
   height: 1.1rem;
@@ -99,8 +100,8 @@
   border-bottom: 1px solid #dddddd;
   font-size: 0.36rem;
   padding-left: 0.5rem;
+  color: #5c5a5a;
 }
 .wrapper .left-wrapper .main-wrapper {
   width: 100%;
-  min-height: 100%;
 }
