--- a/public/style/ctool/base.less
+++ b/public/style/ctool/base.less
@@ -1,25 +1,26 @@
 @import './sidebar.less';
+@fcolor:#5c5a5a;
 .wrapper{
     width: 100%;
     height: 100%;
     display: flex;
     .left-wrapper{
         width: 100%;
-        height: 100%;
+        min-height: 100%;
         flex: 1;
         background-color: #ffffff;
         border-right: 1px solid #dddddd;
+        position: relative;
         .desc-menu{
             height: 55*0.02rem;
             line-height: 55*0.02rem;
             border-bottom: 1px solid #dddddd;
             font-size: 0.36rem;
             padding-left: 0.5rem;
+            color: @fcolor;
         }
         .main-wrapper{
             width: 100%;
-            min-height: 100%;
-            
         }
     }
 }
