--- a/public/style/ctool/sidebar.css
+++ b/public/style/ctool/sidebar.css
@@ -29,7 +29,7 @@
 }
 .right-wrapper .list .side-title {
   font-size: 0.28rem;
-  color: #333333;
+  color: #5c5a5a;
   margin: 0.2rem 0;
 }
 .right-wrapper .list .menu {
@@ -43,7 +43,7 @@
   min-height: 0.5rem;
 }
 .right-wrapper .list .menu > li > a {
-  color: #333333;
+  color: #5c5a5a;
   font-size: 0.24rem;
   position: relative;
 }
@@ -67,7 +67,7 @@
 }
 .right-wrapper .list .menu > li .secondary li a {
   font-size: 0.2rem;
-  color: #333333;
+  color: #5c5a5a;
 }
 .right-wrapper .list.loginout a {
   display: block;
@@ -77,7 +77,7 @@
   margin: 0 auto;
   line-height: 0.5rem;
   background-color: #666666;
-  color: #333333;
+  color: #5c5a5a;
   font-size: 0.24rem;
   text-align: center;
 }
