--- a/public/style/ctool/sidebar.less
+++ b/public/style/ctool/sidebar.less
@@ -1,3 +1,4 @@
+@fcolor:#5c5a5a;
 .right-wrapper{
     width: 2.4rem;
     height: 100%;
@@ -27,7 +28,7 @@
         text-indent: 0.3rem;
         .side-title{
             font-size: 0.28rem;
-            color: #333333;
+            color: @fcolor;
             margin: 0.2rem 0;
         }
         .menu{
@@ -39,7 +40,7 @@
                 line-height: 0.5rem;
                 min-height: 0.5rem;
                 &>a{
-                    color: #333333;
+                    color: @fcolor;
                     font-size: 0.24rem;
                     position: relative;
                     .iconfont{
@@ -62,7 +63,7 @@
                         text-indent: 0.55rem;
                         a{
                             font-size: 0.2rem;
-                            color: #333333;
+                            color: @fcolor;
                         }
                     }
                 }
@@ -77,7 +78,7 @@
                 margin: 0 auto;
                 line-height: 0.5rem;
                 background-color: #666666;
-                color: #333333;
+                color: @fcolor;
                 font-size: 0.24rem;
                 text-align: center;
             }
