--- a/public/style/ctool/base.less
+++ b/public/style/ctool/base.less
@@ -12,10 +12,10 @@
         border-right: 1px solid #dddddd;
         position: relative;
         .desc-menu{
-            height: 55*0.02rem;
-            line-height: 55*0.02rem;
+            height: 200*0.4*0.02rem;
+            line-height: 200*0.4*0.02rem;
             border-bottom: 1px solid #dddddd;
-            font-size: 0.36rem;
+            font-size: 44*0.4*0.02rem;
             padding-left: 0.5rem;
             color: @fcolor;
         }
