--- a/public/style/login.less
+++ b/public/style/login.less
@@ -13,16 +13,16 @@
         width: 40%;
         height: 100%;
         background-color: #6058e5;
+        position: relative;
         .info-box{
             width: 67%;
             margin: 0 auto;
-            position: relative;
             .reg-title{
                 width: 100%;
                 text-align: center;
                 margin: 23% auto 7.8%;
                 color: #ffffff;
-                font-size: 24px;
+                font-size: 60*0.4px;
                 font-weight: normal;
             }
             .find-pwd{
@@ -30,7 +30,7 @@
                 text-align: center;
                 margin: 39.7% auto 17.15%;
                 color: #ffffff;
-                font-size: 24px;
+                font-size: 60*0.4px;
                 font-weight: normal;
             }
             .headpic{
@@ -38,27 +38,27 @@
                 margin: 15.49% auto;
                 text-align: center;
                 img{
-                    width: 5rem;
-                    height: 5rem;
+                    width: 255*0.4px;
+                    height: 255*0.4px;
                 }
             }
             .item{
-                min-height: 150*0.02rem;
-                line-height: 150*0.02rem;
-                margin-bottom: 30*0.02rem;
+                min-height: 45*0.4px;
+                line-height: 45*0.4px;
+                margin-top: 85*0.4px;
                 color: #ffffff;
                 border-bottom: 1px solid #ffffff;
                 padding-left: 8px;
                 .header-box{
-                    width: 6rem;
-                    height: 6rem;
+                    width: 255*0.4px;
+                    height: 255*0.4px;
                     margin: 0 auto;
                     border-radius:50%; 
                     text-align: center;
                     .upload-pic{
                         border-radius:50%;
-                        width: 6rem;
-                        height: 6rem;
+                        width: 255*0.4px;
+                        height: 255*0.4px;
                         margin: 0 auto;
                     }
                     .upload-file{
@@ -70,13 +70,12 @@
                     display: inline-block;
                     min-width: 24%;
                     font-size: 16px;
+                    margin-bottom: 45*0.4px;
                 }
                 .choose{
                     display: inline-block;
-                    min-height: 40*0.02rem;
-                    line-height: 40*0.02rem;
+                    margin-bottom: 45*0.4px;
                     margin-left: 1rem;
-                    vertical-align: middle;
                     font-size: 16px;
                     cursor: pointer;
                     &:last-child{
@@ -116,6 +115,9 @@
                 }
                 &.header-item{
                     border-bottom: none;
+                    .desc{
+                        margin-bottom: 0;
+                    }
                 }
             }
             .login-btn{
@@ -123,9 +125,9 @@
                 .sbtn{
                     display: block;
                     width: 100%;
-                    height: 50px;
-                    line-height: 50px;
-                    border-radius: 25px;
+                    height: 118*0.4px;
+                    line-height: 118*0.4px;
+                    border-radius: 118*0.4px;
                     text-align: center;
                     color: #ffffff;
                     background-color: #3acc6c;
@@ -154,41 +156,67 @@
             }
             &.find-box{
                 .item{
-                    height: 4rem;
-                    line-height: 4rem;
+                    min-height: 90*0.4px;
+                    line-height: 90*0.4px;
                     padding-left: 0;
-                    margin-bottom: 100*0.02rem;
+                    margin-bottom: 90*0.4px;
                     .info{
-                        line-height: 4rem;
-                        height: 4rem;
+                        line-height: 90*0.4px;
+                        height: 90*0.4px;
                     }
                 }
                 .login-btn{
-                    margin-top: 3rem;
+                    margin-top: 95*0.4px;
                 }
             }
-            .tips{
-                display: none;
-                width: 100%;
-                height: 12.7rem;
+            
+            &.reg-box{
+                .item{
+                    min-height: 90*0.4px;
+                    line-height: 90*0.4px;
+                    padding-left: 0;
+                    margin-bottom: 75*0.4px;
+                    .info{
+                        height: 90*0.4px;
+                        line-height: 90*0.4px;
+                    }
+                }
+                .login-btn{
+                    margin-top: 95*0.4px;
+                }
+            }
+        }
+        .tips{
+            display: none;
+            width: 100%;
+            height: 100%;
+            position: absolute;
+            left: 0;
+            top: 0;
+            background-color: transparent;
+            .tips-wrapper{
                 position: absolute;
-                z-index: 999;
-                top: 50%;
+                right: 0;
+                top: 0;
+                bottom: 0;
                 left: 0;
+                margin: auto;
+                width: 715*0.4px;
+                height: 425*0.4px;
                 background-color: #ffffff;
                 border-radius: 12px;
-                color: #333333;
+                color: #4b4b5b;
                 .tips-title{
                     text-align: center;
-                    line-height: 200*0.02rem;
-                    height: 200*0.02rem;
-                    font-size: 22px;
+                    line-height: 150*0.4px;
+                    height: 150*0.4px;
+                    font-size: 55*0.4px;
                 }
                 .tips-msg{
                     width: 80%;
                     margin: 0 auto;
-                    line-height: 2rem;
-                    font-size: 16px;
+                    line-height: 55*0.4px;
+                    font-size: 38*0.4px;
                     text-align: center;
                 }
                 .btn-box{
@@ -196,35 +224,20 @@
                     position: absolute;
                     left: 0;
                     bottom: 0;
-                    height: 150*0.02rem;
-                    line-height: 150*0.02rem;
+                    height: 115*0.4px;
+                    line-height: 115*0.4px;
                     border-top: 1px solid #dddddd;
                     a{
                         float: left;
                         width: 50%;
                         text-align: center;
-                        color: #333333;
-                        font-size: 20px;
+                        color: #4b4b5b;
+                        font-size: 40*0.4px;
                         &.go-msg{
                             border-right: 1px solid #dddddd;
                             width: calc(~"50% - 1px");
                         }
                     }
-                }
-            }
-            &.reg-box{
-                .item{
-                    min-height: 4rem;
-                    line-height: 4rem;
-                    padding-left: 0;
-                    margin-bottom: 100*0.02rem;
-                    .info{
-                        line-height: 4rem;
-                        height: 4rem;
-                    }
-                }
-                .login-btn{
-                    margin-top: 3rem;
                 }
             }
         }
