--- a/views/findPyramid.ejs
+++ b/views/findPyramid.ejs
@@ -5,11 +5,11 @@
   <meta charset="UTF-8">
   <title><%= title%></title>
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no,viewport-fit=cover">
+  <!-- <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no,viewport-fit=cover"> -->
   <script src="/js/tool/rem.js"></script>
   <link rel="stylesheet" href="/style/ctool/common.css">
   <link rel="stylesheet" href="/style/ctool/iconfont.css">
-  <link rel="stylesheet" href="/style/base.css">
+  <link rel="stylesheet" href="/style/findPyramid.css">
   <link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon">
   <!--[if !IE]> -->
   <script type="text/javascript" src="/js/tool/jquery.js"></script>
@@ -29,13 +29,20 @@
     <div class="desc-menu">寻找棱锥</div>
     <!-- 主要内容 -->
     <div class="main-wrapper">
-      
+        <h3 class="title">图片上传</h3>
+        <div class="main-box">
+            <p class="main-title">美美的包装盒做好啦~上传属于你的包装盒制作过程的视频，和同学们一起探讨棱锥的奥秘吧！</p>
+            <div class="upload-box"><img src="/images/upload-pic.png" alt="upload" class="default-bg"></div>
+            <div class="btn-box"><a href="javascript:void(0)">保存并上传图片</a></div>
+        </div>
+        
     </div>
   </div>
   <!-- 右边导航部分 -->
   <%-include("share/sidebar")%>
 </div>
 <script src="/js/tool/landscape.js"></script>
+<script src="/js/common.js"></script>
 <body>
 
 </body>
