--- a/views/login.ejs
+++ b/views/login.ejs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title><%= title%></title>
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <meta content="width=device-width,initial-scale=1.0,user-scalable=yes,minimum-scale=1.0,maximum-scale=3.0" id="viewport" name="viewport">
+    <!-- <meta name="viewport" content="initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no,viewport-fit=cover"> -->
     <link rel="stylesheet" href="/style/ctool/common.css">
     <link rel="stylesheet" href="/style/login.css">
     <link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon">
@@ -58,7 +58,9 @@
                     </div>
                     <p class="user-reg"><a href="/reg.html">新用户注册</a></p>
                 </form>
-                <div class="tips">
+            </div>
+            <div class="tips">
+                <div class="tips-wrapper">
                     <p class="tips-title">温馨提示</p>
                     <p class="tips-msg">验证邮箱已发送到你的邮箱，请注意查收验证邮箱已发送到你的</p>
                     <div class="btn-box">
@@ -92,7 +94,9 @@
                 <div class="login-btn">
                     <input type="submit" class="sbtn" value="下一步">
                 </div>
-                <div class="tips">
+            </div>
+            <div class="tips">
+                <div class="tips-wrapper">
                     <p class="tips-title">提交成功</p>
                     <p class="tips-msg">验证邮箱已发送到你的邮箱，请注意查收验证邮箱已发送到你的</p>
                     <div class="btn-box">
