--- a/views/regularAreaFormula.ejs
+++ b/views/regularAreaFormula.ejs
@@ -10,7 +10,7 @@
   <script src="/js/tool/rem.js"></script>
   <link rel="stylesheet" href="/style/ctool/common.css">
   <link rel="stylesheet" href="/style/ctool/iconfont.css">
-  <link rel="stylesheet" href="/style/sideAreaFormula.css">
+  <link rel="stylesheet" href="/style/RegularAreaFormula.css">
   <link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon">
   <!--[if !IE]> -->
   <script type="text/javascript" src="/js/tool/jquery.js"></script>
@@ -27,10 +27,10 @@
 <div class="wrapper">
   <!-- 主内容区域 -->
   <div class="left-wrapper">
-    <div class="desc-menu">寻找棱锥</div>
+    <div class="desc-menu">正棱锥表面积</div>
     <!-- 主要内容 -->
     <div class="main-wrapper">
-        <h3 class="title">侧面积公式</h3>
+        <h3 class="title">表面积公式</h3>
         <div class="list-box">
             <% for(var i=0;i<2;i++) {%>
               <div class="list">
