--- a/views/share/sidebar.ejs
+++ b/views/share/sidebar.ejs
@@ -10,7 +10,7 @@
         </div>
     </div>
     <div class="list">
-        <p class="side-title">课前预习</span>
+        <p class="side-title first-title">课前预习</span>
         <ul class="before-class menu">
             <li class="active">
                 <a href="https://www.baidu.com">在线测试</a>
@@ -19,7 +19,7 @@
                 <a href="https://www.baidu.com">寻找棱锥</a>
             </li>
             <li>
-                <a href="https://www.baidu.com">制作棱锥</a>
+                <a href="https://www.baidu.com" class="tabborder-bottom">制作棱锥</a>
             </li>
         </ul>
     </div>
@@ -74,7 +74,7 @@
                     </li>
                 </ul>
             </li>
-            <li><a href="">课堂总结</a></li>
+            <li><a href="" class="tabborder-bottom">课堂总结</a></li>
         </ul>
     </div>
 
