--- a/public/style/HomeworkProblems.css
+++ b/public/style/HomeworkProblems.css
@@ -124,65 +124,122 @@
   font-size: 0.352rem;
   color: #5c5a5a;
 }
-.main-wrapper .main-box {
-  width: 78.8%;
+.main-wrapper .list-box {
+  width: 90.8%;
   margin: 0 auto 0.56rem;
+  font-size: 0.26rem;
+  color: #5c5a5a;
 }
-.main-wrapper .main-box .info-box {
+.main-wrapper .list-box .list-req {
+  min-width: 0.64rem;
+  line-height: 0.64rem;
+  color: #5c5a5a;
+  font-size: 0.272rem;
+}
+.main-wrapper .list-box .answerd-req {
+  margin: 0.2rem 0;
+}
+.main-wrapper .list-box .answerd {
   width: 100%;
-  border-bottom: 1px solid #dddddd;
+  margin: 0 auto;
 }
-.main-wrapper .main-box .info-box .info-left {
+.main-wrapper .list-box .answerd .item {
   float: left;
-  padding-bottom: 0.1rem;
-  width: 2.7rem;
-  margin-right: 0.3rem;
+  width: calc(20% - 80*0.4*0.02rem);
+  min-height: 0.21rem;
+  margin-left: 0.32rem;
+  margin-right: 0.32rem;
+  border-radius: 4px;
+  box-shadow: 0 2px 5px 3px rgba(0, 0, 0, 0.1);
 }
-.main-wrapper .main-box .info-box .info-left img {
-  width: 1.04rem;
-  height: 1.04rem;
+.main-wrapper .list-box .answerd .item .order {
+  margin-top: 0.2rem;
+  text-align: center;
+}
+.main-wrapper .list-box .answerd .item .order span {
+  display: block;
+  width: 0.68rem;
+  height: 0.68rem;
+  line-height: 0.68rem;
   border-radius: 50%;
-}
-.main-wrapper .main-box .info-box .info-left span {
-  display: inline-block;
-  font-size: 0.5rem;
-  color: #39cc6c;
-  margin-left: 0.3rem;
-  padding-right: 0.4rem;
-  border-right: 1px solid #eeeeee;
-  vertical-align: middle;
-}
-.main-wrapper .main-box .info-box .info-right {
-  float: right;
-  width: calc(100% - 3rem);
-}
-.main-wrapper .main-box .info-box .info-right .info-title {
+  color: #ffffff;
+  background-color: #6c63ff;
+  margin: 0.15rem auto;
   font-size: 0.3rem;
+}
+.main-wrapper .list-box .answerd .item .answerd-box {
+  margin: 0.1rem auto 0.3rem;
+}
+.main-wrapper .list-box .answerd .item .answerd-box .req2 {
+  display: block;
+  width: 70%;
+  margin: 0.7rem auto 0;
+  line-height: 0.5rem;
+  border: none;
+  outline: none;
+  text-align: center;
+  color: #5c5a5a;
+  border-bottom: 1px solid #676767;
+}
+.main-wrapper .list-box .ansowerd-btn {
+  width: 100%;
+  margin: 0.656rem auto 0.8rem;
+  text-align: center;
+}
+.main-wrapper .list-box .ansowerd-btn .btn {
+  display: block;
+  width: 2.768rem;
+  height: 0.736rem;
+  margin: 0 auto;
+  line-height: 0.736rem;
+  background-color: #6c63ff;
+  color: #ffffff;
+  font-size: 0.36rem;
+  border-radius: 30px;
+  border: none;
+  outline: none;
+}
+.tips {
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+  background-color: transparent;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.tips .main-tips {
+  width: 9.92rem;
+  height: 6.64rem;
+  background-color: #ffffff;
+  box-shadow: 0px 0px 5px 3px rgba(0, 0, 0, 0.1);
+  border-top: 2px solid #6c63ff;
+  text-align: center;
+}
+.tips .main-tips .tip-img {
+  max-width: 2rem;
+}
+.tips .main-tips .tips-title {
+  text-align: center;
+  color: #f32d2d;
+  font-size: 0.36rem;
+  margin: 0.4rem auto;
+}
+.tips .main-tips .tips-msg {
+  font-size: 0.24rem;
   color: #5c5a5a;
   line-height: 0.52rem;
 }
-.main-wrapper .main-box .info-box .info-right .info-time {
-  font-size: 0.24rem;
-  color: #5c5a5a;
-}
-.main-wrapper .main-box .video-box {
+.tips .tips-btn {
   width: 100%;
-  height: 6.632rem;
-  background-color: #39cc6c;
-  margin-top: 0.32rem;
-}
-.main-wrapper .main-box .video-box video {
-  width: 100%;
-  height: 100%;
-}
-.main-wrapper .main-box .back-btn {
-  width: 100%;
-  margin: 0.44rem auto 0;
+  margin: 0.6rem auto 0;
   text-align: center;
 }
-.main-wrapper .main-box .back-btn .btn {
+.tips .tips-btn .tbtn {
   display: block;
-  width: 4.08rem;
+  width: 2.56rem;
   height: 0.72rem;
   margin: 0 auto;
   line-height: 0.72rem;
@@ -192,4 +249,8 @@
   border-radius: 0.72rem;
   border: none;
   outline: none;
+}
+.tips.active {
+  z-index: 999;
+  opacity: 1;
 }
