--- a/public/style/HomeworkProblems.less
+++ b/public/style/HomeworkProblems.less
@@ -15,11 +15,11 @@
         margin: 0 auto 70*0.4*0.02rem; 
         font-size: 0.26rem;
         color: @fcolor;
-        .list{
-            .answerlist{
-                text-indent: 0.8rem;
-                line-height: 0.8rem;
-            }
+        .list-req{
+            min-width: 80*0.4*0.02rem;
+            line-height: 80*0.4*0.02rem;
+            color: @fcolor;
+            font-size: 34*0.4*0.02rem;
         }
         .answerd-req{
             margin: 0.2rem 0;
@@ -29,14 +29,12 @@
             margin: 0 auto;
             .item{
                 float: left;
-                width: 47.8%;
+                width: calc(~"20% - 80*0.4*0.02rem");
                 min-height: 0.21rem;
-                margin-right: 4.4%;
+                margin-left: 40*0.4*0.02rem;
+                margin-right: 40*0.4*0.02rem;
                 border-radius: 4px;
                 box-shadow: 0 2px 5px 3px rgba(0,0,0,.1);
-                &:nth-child(2n){
-                    margin-right: 0;
-                }
                 .order{
                     margin-top: 0.2rem;
                     text-align: center;
@@ -65,41 +63,6 @@
                         color: @fcolor;
                         border-bottom: 1px solid #676767;
                     }
-                    .choose{
-                        float: left;
-                        width: 50%;
-                        min-height: 15*0.02rem;
-                        line-height: 15*0.02rem;
-                        vertical-align: middle;
-                        font-size: 16px;
-                        cursor: pointer;
-                        text-align: center;
-                        margin-top: 0.2rem;
-                        input[type="radio"] {
-                            appearance: none;
-                            -webkit-appearance: none;
-                            outline: none;
-                            display: none;
-                        }
-                        span{
-                            border-radius: 50%;
-                            margin-right: 0.2rem;
-                            vertical-align: middle;
-                        }
-                        input[type="radio"]+span {
-                            width: 0.3rem;
-                            height: 0.3rem;
-                            display: inline-block;
-                            background-color: transparent;
-                            border: 1px solid #dddddd;
-                        }
-    
-                        input[type="radio"]:checked+span {
-                            background-color: #6c63ff;
-                            border: 1px solid #6c63ff;
-                        }
-    
-                    }
                 }
             }
         }
@@ -126,8 +89,8 @@
 
 .tips{
     position: absolute;
-    z-index: -1;
-    opacity: 0;
+    // z-index: -1;
+    // opacity: 0;
     top: 0;
     right: 0;
     width: 100%;
