--- a/public/style/RegularAreaFormula.less
+++ b/public/style/RegularAreaFormula.less
@@ -126,8 +126,8 @@
 
 .tips{
     position: absolute;
-    z-index: -1;
-    opacity: 0;
+    // z-index: -1;
+    // opacity: 0;
     top: 0;
     right: 0;
     width: 100%;
