--- a/public/style/courseManagement.css
+++ b/public/style/courseManagement.css
@@ -117,125 +117,175 @@
   height: calc(100% - 1.6rem);
   overflow-y: auto;
 }
-.main-wrapper .title {
-  height: 0.848rem;
-  line-height: 0.848rem;
-  text-align: center;
-  font-size: 0.352rem;
-  color: #5c5a5a;
-}
-.main-wrapper .list-box {
-  width: 90.8%;
-  margin: 0 auto 0.56rem;
-  font-size: 0.26rem;
-  color: #5c5a5a;
-}
-.main-wrapper .list-box .list .answerlist {
-  text-indent: 0.8rem;
-  line-height: 0.8rem;
-}
-.main-wrapper .list-box .answerd-req {
-  margin: 0.2rem 0;
-}
-.main-wrapper .list-box .answerd {
-  width: 100%;
-  margin: 0 auto;
-}
-.main-wrapper .list-box .answerd .item {
+.main-wrapper .left-side {
   float: left;
-  width: 47.8%;
-  min-height: 0.21rem;
-  margin-right: 4.4%;
+  width: 15.9%;
+  height: 100%;
+  background-color: #f4f4f4;
+}
+.main-wrapper .left-side .search-box {
+  margin: 1.28rem 0.024rem 0.128rem 0.32rem;
+  width: 79.7%;
+  height: 0.64rem;
+  line-height: 0.64rem;
+  background-color: #e8e8e8;
   border-radius: 4px;
-  box-shadow: 0 2px 5px 3px rgba(0, 0, 0, 0.1);
 }
-.main-wrapper .list-box .answerd .item:nth-child(2n) {
-  margin-right: 0;
-}
-.main-wrapper .list-box .answerd .item .order {
-  margin-top: 0.2rem;
+.main-wrapper .left-side .search-box i {
+  float: left;
+  width: 30%;
+  font-size: 0.36rem;
+  color: #5c5a5a;
   text-align: center;
 }
-.main-wrapper .list-box .answerd .item .order span {
-  display: block;
-  width: 0.68rem;
-  height: 0.68rem;
-  line-height: 0.68rem;
-  border-radius: 50%;
-  color: #ffffff;
-  background-color: #6c63ff;
-  margin: 0.15rem auto;
-  font-size: 0.3rem;
-}
-.main-wrapper .list-box .answerd .item .answerd-box {
-  margin: 0.1rem auto 0.3rem;
-}
-.main-wrapper .list-box .answerd .item .answerd-box .req2 {
-  display: block;
+.main-wrapper .left-side .search-box input {
+  float: left;
   width: 70%;
-  margin: 0.7rem auto 0;
-  line-height: 0.5rem;
   border: none;
   outline: none;
+  padding: 0 0.08rem;
+  background-color: transparent;
+  color: #5c5a5a;
+  font-size: 0.272rem;
+  height: 0.64rem;
+  line-height: 0.64rem;
+}
+.main-wrapper .left-side .main-menu {
+  text-indent: 0.48rem;
+}
+.main-wrapper .left-side .main-menu li {
+  height: 1.08rem;
+  line-height: 1.08rem;
+}
+.main-wrapper .left-side .main-menu li a {
+  color: #5c5a5a;
+  font-size: 0.272rem;
+}
+.main-wrapper .left-side .main-menu li a i {
+  color: #5c5a5a;
+  font-size: 0.36rem;
+  margin-right: 0.08rem;
+}
+.main-wrapper .left-side .main-menu li.active a {
+  color: #6c63ff;
+}
+.main-wrapper .left-side .main-menu li.active a i {
+  color: #6c63ff;
+}
+.main-wrapper .right-main {
+  float: left;
+  width: 84.1%;
+  height: 100%;
+}
+.main-wrapper .right-main .main-title {
+  height: 1.28rem;
+  border: 1px solid #dbdbdb;
+}
+.main-wrapper .right-main .main-title a {
+  display: inline-block;
+  width: 1.52rem;
+  height: 0.68rem;
+  line-height: 0.68rem;
+  border-radius: 4px;
+  background-color: #a2a5a7;
+  color: #ffffff;
+  font-size: 0.272rem;
+  text-align: center;
+  margin-top: 0.4rem;
+  margin-left: 0.4rem;
+}
+.main-wrapper .right-main .main-title a.upload-btn {
+  margin-left: 0.84rem;
+}
+.main-wrapper .right-main .main-title a i {
+  color: #ffffff;
+  font-size: 0.368rem;
+  margin-right: 0.064rem;
+}
+.main-wrapper .right-main .main-title a.active {
+  background-color: #6c63ff;
+}
+.main-wrapper .right-main .main-info {
+  width: 100%;
+  padding: 0 0.88rem;
+}
+.main-wrapper .right-main .main-info .info-title {
+  color: #5c5a5a;
+  font-size: 0.28rem;
+  text-indent: 0.12rem;
+}
+.main-wrapper .right-main .main-info table {
+  width: 100%;
+  font-size: 0.272rem;
+}
+.main-wrapper .right-main .main-info table thead tr {
+  height: 1.08rem;
+  line-height: 1.08rem;
+}
+.main-wrapper .right-main .main-info table thead tr th {
+  font-weight: normal;
+}
+.main-wrapper .right-main .main-info table tbody {
+  text-align: center;
+}
+.main-wrapper .right-main .main-info table tbody tr {
+  height: 0.784rem;
+  line-height: 0.784rem;
   text-align: center;
   color: #5c5a5a;
-  border-bottom: 1px solid #676767;
+  font-size: 0.272rem;
+  border-bottom: 1px solid #dbdbdb;
 }
-.main-wrapper .list-box .answerd .item .answerd-box .choose {
-  float: left;
-  width: 50%;
-  min-height: 0.3rem;
-  line-height: 0.3rem;
+.main-wrapper .right-main .main-info table tbody tr .td-check .choose {
+  display: inline-block;
   vertical-align: middle;
-  font-size: 16px;
+  font-size: 0.272rem;
   cursor: pointer;
-  text-align: center;
-  margin-top: 0.2rem;
 }
-.main-wrapper .list-box .answerd .item .answerd-box .choose input[type="radio"] {
+.main-wrapper .right-main .main-info table tbody tr .td-check .choose input[type="checkbox"] {
   appearance: none;
   -webkit-appearance: none;
   outline: none;
   display: none;
 }
-.main-wrapper .list-box .answerd .item .answerd-box .choose span {
-  border-radius: 50%;
-  margin-right: 0.2rem;
+.main-wrapper .right-main .main-info table tbody tr .td-check .choose span {
   vertical-align: middle;
+  font-size: 12px!important;
+  color: #ffffff;
+  margin-right: 0.24rem;
 }
-.main-wrapper .list-box .answerd .item .answerd-box .choose input[type="radio"] + span {
-  width: 0.3rem;
-  height: 0.3rem;
+.main-wrapper .right-main .main-info table tbody tr .td-check .choose input[type="checkbox"] + span {
   display: inline-block;
+  width: 0.32rem;
+  height: 0.32rem;
+  line-height: 0.32rem;
   background-color: transparent;
   border: 1px solid #dddddd;
 }
-.main-wrapper .list-box .answerd .item .answerd-box .choose input[type="radio"]:checked + span {
-  background-color: #6c63ff;
-  border: 1px solid #6c63ff;
+.main-wrapper .right-main .main-info table tbody tr .td-check .choose input[type="checkbox"]:checked + span {
+  background-color: #ffffff;
+  color: #6c63ff;
 }
-.main-wrapper .list-box .ansowerd-btn {
+.main-wrapper .right-main .tips-btn {
   width: 100%;
-  margin: 0.656rem auto 0.8rem;
+  margin: 0.6rem auto 0;
   text-align: center;
 }
-.main-wrapper .list-box .ansowerd-btn .btn {
+.main-wrapper .right-main .tips-btn .sbtn {
   display: block;
-  width: 2.768rem;
-  height: 0.736rem;
+  width: 2.56rem;
+  height: 0.72rem;
   margin: 0 auto;
-  line-height: 0.736rem;
+  line-height: 0.72rem;
   background-color: #6c63ff;
   color: #ffffff;
   font-size: 0.36rem;
-  border-radius: 30px;
+  border-radius: 0.72rem;
   border: none;
   outline: none;
 }
 .tips {
   position: absolute;
-  z-index: -1;
-  opacity: 0;
   top: 0;
   right: 0;
   width: 100%;
@@ -252,6 +302,19 @@
   box-shadow: 0px 0px 5px 3px rgba(0, 0, 0, 0.1);
   border-top: 2px solid #6c63ff;
   text-align: center;
+  position: relative;
+}
+.tips .main-tips > i {
+  position: absolute;
+  width: 0.64rem;
+  height: 0.64rem;
+  top: 0.48rem;
+  right: 0.48rem;
+  font-size: 0.4rem;
+  color: #8e8e8e;
+  border-radius: 50%;
+  box-shadow: 0 0 2px 2px rgba(0, 0, 0, 0.2);
+  padding: 3px;
 }
 .tips .main-tips .tip-img {
   max-width: 2rem;
@@ -266,6 +329,10 @@
   font-size: 0.24rem;
   color: #5c5a5a;
   line-height: 0.52rem;
+}
+.tips .main-tips .tips-msg span {
+  color: #6c63ff;
+  font-size: 0.34rem;
 }
 .tips .tips-btn {
   width: 100%;
