--- a/public/style/makePyramid.less
+++ b/public/style/makePyramid.less
@@ -15,10 +15,26 @@
         margin: 0 auto 70*0.4*0.02rem; 
         font-size: 0.26rem;
         color: @fcolor;
-        .list{
-            .answerlist{
-                text-indent: 0.8rem;
-                line-height: 0.8rem;
+        .info-box{
+            width: 100%;
+            .info-left{
+                float: left;
+                width: 60%;
+                margin-right: 3%;
+                p{
+                    font-size: 0.26rem;
+                    color: @fcolor;
+                    line-height: 0.52rem;
+                }
+            }
+            .info-right{
+                float: right;
+                width: 37%;
+                padding-top: 0.1rem;
+                img{
+                    width: 100%;
+                    height: auto;
+                }
             }
         }
         .answerd-req{
@@ -64,41 +80,6 @@
                         text-align: center;
                         color: @fcolor;
                         border-bottom: 1px solid #676767;
-                    }
-                    .choose{
-                        float: left;
-                        width: 50%;
-                        min-height: 15*0.02rem;
-                        line-height: 15*0.02rem;
-                        vertical-align: middle;
-                        font-size: 16px;
-                        cursor: pointer;
-                        text-align: center;
-                        margin-top: 0.2rem;
-                        input[type="radio"] {
-                            appearance: none;
-                            -webkit-appearance: none;
-                            outline: none;
-                            display: none;
-                        }
-                        span{
-                            border-radius: 50%;
-                            margin-right: 0.2rem;
-                            vertical-align: middle;
-                        }
-                        input[type="radio"]+span {
-                            width: 0.3rem;
-                            height: 0.3rem;
-                            display: inline-block;
-                            background-color: transparent;
-                            border: 1px solid #dddddd;
-                        }
-    
-                        input[type="radio"]:checked+span {
-                            background-color: #6c63ff;
-                            border: 1px solid #6c63ff;
-                        }
-    
                     }
                 }
             }
