--- a/public/style/videDetail.less
+++ b/public/style/videDetail.less
@@ -1,18 +1,18 @@
 @import './ctool/base.less';
 @fcolor:#5c5a5a;
 .main-wrapper{
-    height: calc(~"100% - 1.1rem");
+    height: calc(~"100% - 1.6rem");
     overflow-y:auto; 
     .title{
-        height: 80*0.02rem;
-        line-height: 80*0.02rem;
+        height: 106*0.4*0.02rem;
+        line-height: 106*0.4*0.02rem;
         text-align: center;
-        font-size: 0.36rem;
+        font-size: 44*0.4*0.02rem;
         color: @fcolor;
     }
     .main-box{
         width: 78.8%;
-        margin: 0 auto 0.6rem;
+        margin: 0 auto 70*0.4*0.02rem; 
         .info-box{
             width: 100%;
             border-bottom: 1px solid #dddddd;
@@ -22,8 +22,8 @@
                 width: 2.7rem;
                 margin-right: 0.3rem;
                 img{
-                    width: 1rem;
-                    height: 1rem;
+                    width: 130*0.4*0.02rem;
+                    height: 130*0.4*0.02rem;
                     border-radius: 50%;
                 }
                 span{
@@ -52,9 +52,9 @@
         }
         .video-box{
             width: 100%;
-            height: 400*0.02rem;
+            height: 829*0.4*0.02rem;
             background-color: #39cc6c;
-            margin-top: 0.25rem;
+            margin-top: 40*0.4*0.02rem;
             video{
                 width: 100%;
                 height: 100%;
@@ -62,18 +62,18 @@
         }
         .back-btn{
             width: 100%;
-            margin: 0.4rem auto 0.6rem;
+            margin: 55*0.4*0.02rem auto 0;
             text-align: center;
             .btn{
                 display: block;
-                width: 200*0.02rem;
-                height: 50*0.02rem;
+                width: 510*0.4*0.02rem;
+                height: 90*0.4*0.02rem;
                 margin: 0 auto;
-                line-height: 50*0.02rem;
+                line-height: 90*0.4*0.02rem;
                 background-color: #6c63ff;
                 color: #ffffff;
                 font-size: 0.36rem;
-                border-radius: 30px;
+                border-radius: 90*0.4*0.02rem;
                 border: none;
                 outline: none;
             }
