--- a/views/lineRelation.ejs
+++ b/views/lineRelation.ejs
@@ -5,11 +5,11 @@
   <meta charset="UTF-8">
   <title><%= title%></title>
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no,viewport-fit=cover">
+  <!-- <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no,viewport-fit=cover"> -->
   <script src="/js/tool/rem.js"></script>
   <link rel="stylesheet" href="/style/ctool/common.css">
   <link rel="stylesheet" href="/style/ctool/iconfont.css">
-  <link rel="stylesheet" href="/style/base.css">
+  <link rel="stylesheet" href="/style/lineRelation.css">
   <link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon">
   <!--[if !IE]> -->
   <script type="text/javascript" src="/js/tool/jquery.js"></script>
@@ -29,13 +29,26 @@
     <div class="desc-menu">寻找棱锥</div>
     <!-- 主要内容 -->
     <div class="main-wrapper">
-      
+        <h3 class="title">探索正三棱锥</h3>
+        <div class="main-box">
+            <div class="pic-bpx">
+                
+            </div>
+            <div class="btn-box clearfix">
+                <a href="javascript:void(0)">正视图</a>
+                <a href="javascript:void(0)">俯视图</a>
+                <a href="javascript:void(0)">左视图</a>
+                <a href="javascript:void(0)">左视图</a>
+            </div>
+        </div>
+        
     </div>
   </div>
   <!-- 右边导航部分 -->
   <%-include("share/sidebar")%>
 </div>
 <script src="/js/tool/landscape.js"></script>
+<script src="/js/common.js"></script>
 <body>
 
 </body>
