--- a/views/courseManagement.ejs
+++ b/views/courseManagement.ejs
@@ -5,8 +5,7 @@
   <meta charset="UTF-8">
   <title><%= title%></title>
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <meta content="width=device-width,initial-scale=1.0,user-scalable=yes,minimum-scale=1.0,maximum-scale=3.0" id="viewport"
-    name="viewport">
+  <!-- <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no,viewport-fit=cover"> -->
   <script src="/js/tool/rem.js"></script>
   <link rel="stylesheet" href="/style/ctool/common.css">
   <link rel="stylesheet" href="/style/ctool/iconfont.css">
